k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-frontend
  namespace: hotel
  labels:
    app: hotel-frontend
spec:
  type: ClusterIP
  selector:
    app: hotel-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
